--- a/go_webapp_01/templates/index.html
+++ b/go_webapp_01/templates/index.html
@@ -6,7 +6,7 @@
   <title>Go Practice Webapp</title>
 </head>
 <body>
-  <h1>Hello World!</h1>
-  <h1>Hello go-gin!</h1>
+  <h1>{{.title}}</h1>
+  <h3>{{.subtitle}}</h3>
 </body>
 </html>
