--- a/go_webapp_01/templates/index.html
+++ b/go_webapp_01/templates/index.html
@@ -6,7 +6,12 @@
   <title>Go Practice Webapp</title>
 </head>
 <body>
-  <h1>{{.title}}</h1>
-  <h3>{{.subtitle}}</h3>
+  <header>
+    <h1>Go Practice Webapp</h1>
+  </header>    
+  <main>
+    <h1>{{.content}}</h1>
+    <h3>{{.subContent}}</h3>
+  </main>
 </body>
 </html>
