--- a/go_webapp_01/templates/movie_page.html
+++ b/go_webapp_01/templates/movie_page.html
@@ -12,5 +12,10 @@
   <main>
     <h1>Movie Page</h1>
   </main>
+  <footer>
+    <a href="/">Home</a>
+    <a href="/movie">Movie</a>
+    <a href="/character">Character</a>
+  </footer>
 </body>
 </html>
