--- a/go_webapp_01/templates/index.html
+++ b/go_webapp_01/templates/index.html
@@ -13,5 +13,10 @@
     <h1>{{.content}}</h1>
     <h3>{{.subContent}}</h3>
   </main>
+  <footer>
+    <a href="/">Home</a>
+    <a href="/movie">Movie</a>
+    <a href="/character">Character</a>
+  </footer>
 </body>
 </html>
