--- a/go_chat_01/templates/chat.html
+++ b/go_chat_01/templates/chat.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat Application using WebSocket</title>
+    <style>
+        input { display: block; }
+        ul { list-style: none; }
+    </style>
 </head>
 <body>
     <ul id="messages"></ul>
