update first go-gin - create CRUD methods

--- a/fundamental/go-gin-first/templates/index.html
+++ b/fundamental/go-gin-first/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <h2>{{ .request_time }}</h2>
+    <h2>{{ .requestTime }}</h2>
     <ul>
         {{ range .todos }}
             <li>コンテンツ: {{ .Text }}</li>
