--- a/fundamental/go-gin-first/templates/index.html
+++ b/fundamental/go-gin-first/templates/index.html
@@ -6,16 +6,27 @@
     <title>First App - Gin Web Framework</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <h2>{{ .requestTime }}</h2>
-    <p>
+    <h2>追加</h2>
+    <form method="post" action="/new">
+        <p>内容<input type="text" name="text" size="30" placeholder="入力してください" ></p>
+        <p>ステータス
+            <select name="status">
+                <option value="Pending">着手不可</option>
+                <option value="Ready">未着手</option>
+                <option value="Doing">着手中</option>
+                <option value="Done">完了</option>
+            </select>
+        </p>
+        <p><input type="submit" value="Send"></p>
+    </form>
+    
+    <ul>
         {{ range .todos }}
-            <ul>
-                <li>コンテンツ: {{ .Text }}</li>
-                <li>ステータス: {{ .Status }}</li>
-                <li>作成日: {{ .CreatedAt }} / 更新日: {{ .UpdatedAt }}</li>
-            </ul>
-        {{ end }}
-    </p>
-</body>
+            <li>内容：{{ .Text }}、状態：{{ .Status }}
+                <label><a href="/detail/{{.ID}}">編集</a></label>
+                <label><a href="/delete_check/{{.ID}}">削除</a></label>
+            </li>
+        {{end}}
+    </ul>
+    </body>
 </html>
