--- a/go_chat_04/templates/home.html
+++ b/go_chat_04/templates/home.html
@@ -94,7 +94,7 @@ body {
     top: 0.5em;
     left: 0.5em;
     right: 0.5em;
-    bottom: 5em;
+    bottom: 8em;
     overflow: auto;
 }
 
@@ -123,7 +123,7 @@ body {
         Name <input type="text" id="name" size="32" autofocus />
     </div>
     <div>
-        Message <input type="text" id="message" size="64" autofocus />
+        Message <textarea type="text" id="message" rows="4" cols="64" autofocus></textarea>
     </div>
 </form>
 </body>
